readjust structure of removed content

--- a/_config.yml
+++ b/_config.yml
@@ -192,6 +192,13 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+excludes:
+  - _pages/templates/blog.md
+  - _pages/templates/books.md
+  - _pages/templates/dropdown.md
+  - _pages/templates/profiles.md
+  - _pages/templates/repositories.md
+  - _pages/templates/teaching.md
 keep_files:
   - CNAME
   - .nojekyll
