--- a/_config.yml
+++ b/_config.yml
@@ -271,8 +271,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Hung]
+  first_name: [Ethan, E., E.C.]
 
   style: apa
   locale: en
