--- a/_data/templates/cv.yml
+++ b/_data/templates/cv.yml
@@ -3,10 +3,8 @@
   contents:
     - name: Full Name
       value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
     - name: Languages
-      value: English, German
+      value: English
 
 - title: Education
   type: time_table
