--- a/_config.yml
+++ b/_config.yml
@@ -193,12 +193,12 @@ exclude:
   - readme_preview/
   - vendor
 excludes:
-  - _pages/templates/blog.md
-  - _pages/templates/books.md
-  - _pages/templates/dropdown.md
-  - _pages/templates/profiles.md
-  - _pages/templates/repositories.md
-  - _pages/templates/teaching.md
+  - _pages/blog.md
+  - _pages/books.md
+  - _pages/dropdown.md
+  - _pages/profiles.md
+  - _pages/repositories.md
+  - _pages/teaching.md
 keep_files:
   - CNAME
   - .nojekyll
